# twg_summer_2025

./: Cargo.toml  tiled_types_export.json
assets/: 4x-2x.tsx  Interiors_free_32x32.tsx  Modern_Office_Shadowless_32x32.tsx  Room_Builder_Office_32x32.tsx  Tileset_Modern Bedroom_Rasak.tsx  Tileset_Modern KitchenToilett_Rasak.tsx  Tileset_ModernHouse_StorageOffice_Rasak.tsx  TopDownHouse_FurnitureState2.tsx  TopDownHouse_FurnitureState2_scaled_2x_pngcrushed.tsx  cards.json  convert.sh  endgame.json  game.ldtk  my-room.tiled-project  my-room.tiled-session  my_room.tmx  schizophrenic-cards.json  script.rpy  tiled_types_export.json
assets/endgame/: balanced_recovery.rpy  carrer_success.rpy  creative_fullfilment.rpy  hallucination_reality_break.rpy  health_crisis_death.rpy  monotonous_survival.rpy  psychiatric_hospitalization.rpy  romantic_recovery.rpy  social_reconnection.rpy  suicide_attempt.rpy
assets/endgame_pics/: tiled_types_export.json
assets/menu/: game_over.html  loading_menu.html  main_menu.html  narrative_menu.html  novel_menu.html  poker_menu.html  shop_menu.html
assets/scenarios/: 0.rpy  1.rpy  10.rpy  11.rpy  12.rpy  13.rpy  14.rpy  15.rpy  16.rpy  17.rpy  18.rpy  19.rpy  2.rpy  20.rpy  21.rpy  22.rpy  23.rpy  24.rpy  25.rpy  26.rpy  27.rpy  28.rpy  29.rpy  3.rpy  30.rpy  31.rpy  32.rpy  33.rpy  34.rpy  4.rpy  5.rpy  6.rpy  7.rpy  8.rpy  (+1 more)
src/: cards.rs  collisions.rs  cutscene.rs  cutscene_menu.rs  debug.rs  endgame.rs  game_objects.rs  logic.rs  main.rs  main_menu.rs  menu.rs  navigation.rs  player.rs  splashscreen.rs  sprites.rs  thoughts.rs  ui.rs
(+16 files in other folders)
