[package]
name = "llm_game"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
avian2d = "0.3"
bevy = { version = "0.16.1", default-features = false, features = [
    "std",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
] }
bevy-inspector-egui = "0.31"
bevy_common_assets = { version = "0.13", features = ["json"] }
bevy_ecs_tiled = { version = "0.7", features = ["avian", "user_properties"] }
bevy_ecs_tilemap = "0.16"
# bevy_la_mesa = { version = "0.16" }
bevy_la_mesa = { path = "crates/bevy_la_mesa" }
paste = "1.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
bevy_defer = "0.14"
rand = "0.9.2"
bevy_llm = { path = "crates/bevy_llm" }
bevy_kira_audio = { version = "0.23", features = ["ogg", "mp3", "wav"] }
bevy_novel = "0.16.1"
bevy_hui = { version = "0.4" }
bevy_tweening = "0.13"
